<resources>
    <string name="app_name">CSGOTeamGenerator</string>
    <string name="sniper">Sniper</string>
    <string name="rifler">Rifler</string>
    <string name="igl">In-game leader</string>
    <string name="generate_team">GENERATE TEAM</string>
    <string name="player_list">PLAYER LIST</string>
    <string name="add_player">ADD PLAYER</string>
    <string name="settings">SETTINGS</string>
    <string name="nav_open_drawer">Open nagivation drawer</string>
    <string name="nav_close_drawer">Close nagivation drawer</string>
    <string name="sniper_tab">Snipers</string>
    <string name="riflers_tab">Riflers</string>
    <string name="igls_tab">IGLs</string>
    <string name="share">Share</string>
    <string name="player_nickname">Player nickname</string>
    <string name="hint_liquipedia">Hint: Make sure that player name is the same as his Liquipedia URL suffix
        \nExample: https://liquipedia.net/counterstrike/NiKo
    \nPlayername: NiKo</string>
    <string name="locked">Nickname (locked)</string>
    <string name="nickname">Nickname</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>