<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background7">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_main" />

    <include
        layout="@layout/player_image_frame"
        android:id="@+id/frame_layout_player1"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="120dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toStartOf="@+id/frame_layout_player2"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <include
        layout="@layout/player_image_frame"
        android:id="@+id/frame_layout_player2"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="120dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toStartOf="@+id/frame_layout_player3"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <include
        android:id="@+id/frame_layout_player3"
        layout="@layout/player_image_frame"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <include
        android:id="@+id/frame_layout_player4"
        layout="@layout/player_image_frame"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/frame_layout_player3"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <include
        android:id="@+id/frame_layout_player5"
        layout="@layout/player_image_frame"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/frame_layout_player4"
        app:layout_constraintTop_toBottomOf="@+id/include" />


    <TextView
        android:id="@+id/text_sniper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/agency_fb"
        android:text="@string/sniper"
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout_player1"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player1"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player1" />

    <TextView
        android:id="@+id/text_rifle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/agency_fb"
        android:text="@string/rifler"
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout_player2"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player2"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player2" />

    <TextView
        android:id="@+id/text_rifle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/agency_fb"
        android:text="@string/rifler"
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout_player3"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player3"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player3" />

    <TextView
        android:id="@+id/text_rifle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/agency_fb"
        android:text="@string/rifler"
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout_player4"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player4"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player4" />

    <TextView
        android:id="@+id/text_igl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/agency_fb"
        android:text="@string/igl"
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout_player5"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player5"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player5" />

    <TextView
        android:id="@+id/text_nick1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/agency_fb"
        android:text=""
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player1"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player1"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_player1" />

    <TextView
        android:id="@+id/text_nick2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/agency_fb"
        android:text=""
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player2"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player2"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_player2" />

    <TextView
        android:id="@+id/text_nick3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/agency_fb"
        android:text=""
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player3"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player3"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_player3" />

    <TextView
        android:id="@+id/text_nick4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/agency_fb"
        android:text=""
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player4"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player4"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_player4" />

    <TextView
        android:id="@+id/text_nick5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/agency_fb"
        android:text=""
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/frame_layout_player5"
        app:layout_constraintStart_toStartOf="@+id/frame_layout_player5"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_player5" />

    <ImageView
        android:id="@+id/button_generate"
        android:layout_width="200dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nick3"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/generate_static" />
</android.support.constraint.ConstraintLayout>
